--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ egui = "0.33.3"
 egui_extras = { version = "0.33.3", features = ["all_loaders", "http", "image"] }
 egui_plot = "0.34.0"
 image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
-rusqlite = { version = "0.32", features = ["bundled"] }
+rusqlite = { version = "0.37", features = ["bundled"] }
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
-dotenvy = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
 urlencoding = "2.1"
 egui-phosphor = "0.11.0"
+toml = "0.9"
 
 [build-dependencies]
 winresource = "0.1"
