feat: Implement WASM frontend and backend integration for Overachiever
- Added new UI components and application state management in `crates/desktop/src/ui.rs`.
- Created a new WASM package with dependencies and configuration in `crates/wasm/Cargo.toml`.
- Developed the main HTML structure and loading animations in `crates/wasm/index.html`.
- Implemented the main application logic and WebSocket client in `crates/wasm/src/app.rs` and `crates/wasm/src/ws_client.rs`.
- Set up build scripts for both backend and WASM targets in `scripts/build_backend.ps1` and `scripts/build_wasm.ps1`.
- Configured deployment scripts and server setup for Overachiever in `scripts/deploy.ps1` and `scripts/setup_server.ps1`.
- Added Nginx configuration for serving the WASM frontend and proxying API requests in `scripts/server/nginx-overachiever.conf`.
- Created systemd service for the backend in `scripts/server/overachiever-backend.service`.
- Provided example environment configuration in `scripts/server/overachiever.env.example`.
- Updated the main HTML file for the WASM frontend in `web/index.html`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,33 @@
-[package]
-name = "steam-overachiever-v3"
+[workspace]
+resolver = "2"
+members = [
+    "crates/core",
+    "crates/desktop",
+    "crates/backend",
+    "crates/wasm",
+]
+
+# Default to desktop when running `cargo run`
+default-members = ["crates/desktop"]
+
+[workspace.package]
 version = "0.2.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/kumorig/steam-overachiever-v3"
 
-[dependencies]
-eframe = { version = "0.33.3", features = ["default_fonts"] }
-egui = "0.33.3"
-egui_extras = { version = "0.33.3", features = ["all_loaders", "http", "image"] }
-egui_plot = "0.34.0"
-image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
-rusqlite = { version = "0.37", features = ["bundled"] }
-reqwest = { version = "0.12", features = ["json", "blocking"] }
+[workspace.dependencies]
+# Shared dependencies across crates
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
-urlencoding = "2.1"
-egui-phosphor = "0.11.0"
-toml = "0.9"
+tokio = { version = "1", features = ["full"] }
+thiserror = "1.0"
 
-[build-dependencies]
-winresource = "0.1"
+# Core crate
+overachiever-core = { path = "crates/core" }
+
+# Optimize release builds for WASM
+[profile.release]
+opt-level = "s"
+lto = true
