--- a/scripts/server/nginx-overachiever.conf
+++ b/scripts/server/nginx-overachiever.conf
@@ -1,32 +1,18 @@
 # Nginx configuration for overachiever.space
 # Serves WASM frontend and proxies API/WebSocket to backend
+# Note: After initial setup, run certbot to enable SSL:
+#   sudo certbot --nginx -d overachiever.space -d www.overachiever.space
 
 server {
     listen 80;
     server_name overachiever.space www.overachiever.space;
     
-    # Redirect HTTP to HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name overachiever.space www.overachiever.space;
-    
-    # SSL certificates (will be managed by certbot)
-    ssl_certificate /etc/letsencrypt/live/overachiever.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/overachiever.space/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    
     # Document root for WASM frontend
     root /var/www/overachiever;
     index index.html;
     
-    # WASM MIME types
-    types {
-        application/wasm wasm;
-    }
+    # Include default MIME types
+    include /etc/nginx/mime.types;
     
     # Enable gzip for WASM and JS
     gzip on;
@@ -35,8 +21,6 @@ server {
     # Serve WASM files with correct headers
     location ~* \.wasm$ {
         add_header Content-Type application/wasm;
-        add_header Cross-Origin-Embedder-Policy require-corp;
-        add_header Cross-Origin-Opener-Policy same-origin;
     }
     
     # WebSocket endpoint - proxy to backend
