--- a/scripts/server/overachiever.env.example
+++ b/scripts/server/overachiever.env.example
@@ -17,5 +17,8 @@ JWT_SECRET=CHANGE_THIS_TO_A_RANDOM_SECRET
 # Steam API Key (from https://steamcommunity.com/dev/apikey)
 STEAM_API_KEY=YOUR_STEAM_API_KEY
 
+# Steam OpenID callback URL (must match your public domain)
+STEAM_CALLBACK_URL=https://overachiever.space/auth/steam/callback
+
 # Logging level
 RUST_LOG=overachiever_backend=info,tower_http=info
