--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -14,10 +14,11 @@ async-trait = { version = "0.1", optional = true }
 
 # Optional egui support for shared UI components
 egui = { version = "0.33", optional = true }
+egui_extras = { version = "0.33", optional = true }
 egui_plot = { version = "0.34", optional = true }
 egui-phosphor = { version = "0.11", optional = true, features = ["regular"] }
 
 [features]
 default = []
 async = ["async-trait"]
-ui = ["egui", "egui_plot", "egui-phosphor"]
+ui = ["egui", "egui_extras", "egui_plot", "egui-phosphor"]
