--- a/scripts/server/nginx-overachiever.conf
+++ b/scripts/server/nginx-overachiever.conf
@@ -70,6 +70,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Allow large uploads for cloud sync (up to 50MB)
+        client_max_body_size 50M;
+        
+        # Increase timeouts for large uploads
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
     }
     
     # Auth endpoints - proxy to backend
