* allow updating single games with refresh-button in game table. * fix for games not being added automatically when appearing in recently played. (probably free games which weren't added by full scan?) * fix uneven striped background in the log-view. * launch button for installed games (in desktop version). * We now find installed apps by:   - Finding Steam installation path via registry or common paths   - Parsing libraryfolders.vdf to find all Steam library folders   - Scanning for appmanifest_*.acf files in steamapps folders * new filter for installed games (desktop only). * install button for non installed games(desktop only). * sharable user-url (to enable, login/logout in wasm, or unlink/link in desktop). * upload progress for "upload data" (desktop only).

--- a/crates/desktop/Cargo.toml
+++ b/crates/desktop/Cargo.toml
@@ -25,6 +25,11 @@ urlencoding = "2.1"
 egui-phosphor = "0.11.0"
 toml = "0.9"
 open = "5"
+jsonwebtoken = "9"
+base64 = "0.22"
+
+# Windows registry for Steam path detection
+winreg = "0.55"
 
 # WebSocket client for hybrid/remote modes
 tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
