--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -39,3 +39,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 futures-util = "0.3"
 urlencoding = "2.1"
 dotenvy = "0.15"
+rand = "0.8"
