--- a/crates/desktop/Cargo.toml
+++ b/crates/desktop/Cargo.toml
@@ -15,8 +15,8 @@ egui = "0.33.3"
 egui_extras = { version = "0.33.3", features = ["all_loaders", "http", "image"] }
 egui_plot = "0.34.0"
 image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
-rusqlite = { version = "0.37", features = ["bundled"] }
-reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"] }
+rusqlite = { version = "0.38", features = ["bundled"] }
+reqwest = { version = "0.13.1", default-features = false, features = ["json", "blocking", "native-tls-no-alpn"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
@@ -25,7 +25,7 @@ urlencoding = "2.1"
 egui-phosphor = "0.11.0"
 toml = "0.9"
 open = "5"
-jsonwebtoken = "9"
+jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
 base64 = "0.22"
 
 # Windows registry for Steam path detection
@@ -34,6 +34,9 @@ winreg = "0.55"
 # WebSocket client for hybrid/remote modes
 tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
 futures-util = "0.3"
+
+# Headless Chrome for HLTB scraping
+headless_chrome = "1"
 
 [build-dependencies]
 winresource = "0.1"
