--- a/crates/desktop/Cargo.toml
+++ b/crates/desktop/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "overachiever-desktop"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2021"
 
 [[bin]]
@@ -27,6 +27,7 @@ toml = "0.9"
 open = "5"
 jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
 base64 = "0.22"
+directories = "5.0"
 
 # Windows registry for Steam path detection
 winreg = "0.55"
