--- a/crates/desktop/Cargo.toml
+++ b/crates/desktop/Cargo.toml
@@ -27,10 +27,14 @@ toml = "0.9"
 open = "5"
 jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
 base64 = "0.22"
-directories = "5.0"
+directories = "6.0"
+zip = "2.2"
 
 # Windows registry for Steam path detection
 winreg = "0.55"
+
+# VDF parser for Steam config files
+keyvalues-parser = "0.2"
 
 # WebSocket client for hybrid/remote modes
 tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
